summative.moria.Moria.scala.code
def deplace{
  setDirection(Direction.EAST:Direction)
  avance()
}